Attempt to fix autocollapse overzealous behavior (crude)

--- a/css/bootstrap-overrides.css
+++ b/css/bootstrap-overrides.css
@@ -14,6 +14,9 @@
 #autocollapse.collapsed .navbar-collapse.collapse {
     display: none!important;
 }
+#autocollapse.collapsed .navbar-collapse.collapse.in {
+    display: block!important;
+}
 #autocollapse.collapsed .navbar-nav {
     float: none!important;
     margin: 7.5px -15px;
